--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,5 +25,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PT'
 - !lcsh 'Danish drama'
+- GITenberg
 title: Ambrosius
 url: http://www.gutenberg.org/ebooks/13599
